# flakeradar

./: .gitignore  .pypirc  ADVANCED_FEATURES.md  API_DOCS.md  CENTRAL_DASHBOARD_IMPLEMENTATION.md  DASHBOARD_IMPROVEMENTS.md  DATA_FIXES.md  DEPLOYMENT_STRATEGY.md  ENTERPRISE_DEPLOYMENT.md  JENKINS_INTEGRATION_GUIDE.md  LOCAL_DEV_SETUP.md  MANIFEST.in  PARAMETER_GUIDE.md  PUBLICATION_SUCCESS.md  PUBLISH_INSTRUCTIONS.md  PYTHON_API_COMPLETE.md  README.md  README_UPDATE_SUMMARY.md  README_VERIFICATION_SUCCESS.md  RELEASE_NOTES.md  TEAM_COLLABORATION_SUMMARY.md  TIME_TO_FIX_ANALYTICS.md  api_test_metrics.json  api_test_report.html  backend_final_metrics.json  backend_final_report.html  cli_test_report.html  context_test.db-shm  demo_test_results.xml  dev_server.py  example1_metrics.json  example1_report.html  examples.py  final_integration_test.py  frontend_final_metrics.json  frontend_final_report.html  integration_final_metrics.json  integration_final_report.html  linkedin_demo_report.html  parameter_demo.py  (+17 more)
.github/workflows/: flakeradar.yml
examples/: team_collaboration_example.py
src/: setup.cfg
src/flakeradar/: __init__.py  analyzer.py  api.py  cli.py  config.py  history.py  html_report.py  model.py  root_cause_clustering.py  send_kafka.py  send_redis.py  summarize.py  team_analyzer.py  team_backend.py
src/flakeradar/parsers/: detect.py  junit.py
src/flakeradar/sample_results/: run1-pass.xml  run3-mixed.xml
