[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "flakeradar"
version = "1.1.0"
description = "AI-Powered Test Flakiness Detection & Root Cause Analysis - Enterprise-grade analytics for test reliability"
authors = [{name="Harsh", email="geemax.harsh@gmail.com"}]
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
keywords = ["testing", "flaky-tests", "ci-cd", "test-analytics", "ai", "quality-assurance"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Testing",
    "Topic :: Software Development :: Quality Assurance",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
  "click>=8.1",
  "lxml>=5.2",
  "tabulate>=0.9",
  "jinja2>=3.1",
  "requests>=2.32",
  "openai>=1.40",           # official client
  "redis>=5.0",
  "kafka-python>=2.0",      # lightweight; swap for confluent-kafka later
  "sqlalchemy>=2.0",
  "alembic>=1.13",
  "pydantic>=2.7"
]

[project.urls]
Homepage = "https://github.com/hahaharsh7/flakeradar"
Repository = "https://github.com/hahaharsh7/flakeradar"
Issues = "https://github.com/hahaharsh7/flakeradar/issues"
Documentation = "https://github.com/hahaharsh7/flakeradar#readme"

[project.scripts]
flakeradar = "flakeradar.cli:cli"