[metadata]
name = flakeradar
version = 0.1.0
description = Local flakiness analyzer with AI summaries + Redis/Kafka hooks

[options]
packages = find:
install_requires =
    click>=8.1
    lxml>=5.2
    tabulate>=0.9
    jinja2>=3.1
    requests>=2.32
    openai>=1.40
    redis>=5.0
    kafka-python>=2.0
    sqlalchemy>=2.0
    alembic>=1.13
    pydantic>=2.7

[options.packages.find]
where = src